HelloUltraviolet/Fixtures/RejectedSource/Statements/BindingStatementsDiagnostic/Expected.uv
//! Expected diagnostic metadata for the BindingStatementsDiagnostic rejected-source specimen.

expectedDiagnostic("E-TYP-1530", "diag.18.BindingStatements")
